# handmadehero

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  common_used_defs.h  handmade.cpp  handmade.h  reload.bat  run.bat  smite.bat  win32_handmade.cpp  win32_handmade.h
